# tempest-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  tempest.conf.example  tempest.secrets.example
System Volume Information/: IndexerVolumeGuid
include/tempest/app/: CommandRouter.h
include/tempest/core/: Ansi.h  Banner.h  BuildInfo.h  Clock.h  Config.h  Strings.h
include/tempest/models/: LlamaCli.h  LlamaEngine.h  ModelManager.h
include/tempest/rag/: RagEngine.h
include/tempest/store/: SqliteStore.h
include/tempest/telegram/: TelegramGateway.h
include/tempest/ui/: TerminalUI.h  UserInterface.h
include/tempest/wiki/: WikiIngestor.h
src/: main.cpp
src/app/: CommandRouter.cpp
src/core/: Ansi.cpp  Banner.cpp  BuildInfo.cpp  Clock.cpp  Config.cpp  Strings.cpp
src/models/: LlamaCli.cpp  LlamaEngine.cpp  ModelManager.cpp
src/rag/: RagEngine.cpp
src/store/: SqliteStore.cpp
src/telegram/: TelegramGateway.cpp  TelegramHttp.cpp
src/ui/: TerminalUI.cpp
src/wiki/: WikiIngestor.cpp
